test/oscar/compiler/errors/funcReturnMismatch.oscar
def add5(int: x) => int = {
	return x + 5;
}

def main() => unit = {
	double y = add5(1));
}